force-app/main/default/objects/Development_Feasibility_Review__c/Development_Feasibility_Review__c.object-meta.xml
<CustomObject>
    <label>Development Feasibility Review</label>
    <nameField>
        <displayFormat>DFR-{0000}</displayFormat>
        <label>DFR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Development Feasibility Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>