force-app/main/default/objects/Development_Feasibility_Review__c/fields/Architecture_Firm__c.field-meta.xml
<CustomField>
    <fullName>Architecture_Firm__c</fullName>
    <label>Architecture Firm</label>
    <length>120</length>
    <type>Text</type>
</CustomField>