force-app/main/default/objects/Development_Feasibility_Review__c/fields/Civil_MEP_Scope__c.field-meta.xml
<CustomField>
    <fullName>Civil_MEP_Scope__c</fullName>
    <label>Civil / MEP Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>