force-app/main/default/objects/Development_Feasibility_Review__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <formula>TEXT(Opportunity__r.Deal_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Type</label>
    <type>Text</type>
</CustomField>