force-app/main/default/objects/Development_Feasibility_Review__c/fields/Developable_Area__c.field-meta.xml
<CustomField>
    <fullName>Developable_Area__c</fullName>
    <label>Developable Area</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>