force-app/main/default/objects/Development_Feasibility_Review__c/fields/Drainage_Study_Required__c.field-meta.xml
<CustomField>
    <fullName>Drainage_Study_Required__c</fullName>
    <label>Drainage Study Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>