force-app/main/default/objects/Development_Feasibility_Review__c/fields/Drainage_Study_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Drainage_Study_Timeline__c</fullName>
    <label>Drainage Study Timeline</label>
    <length>40</length>
    <type>Text</type>
</CustomField>