force-app/main/default/objects/Development_Feasibility_Review__c/fields/Est_Cost_Impact__c.field-meta.xml
<CustomField>
    <fullName>Est_Cost_Impact__c</fullName>
    <label>Est. Cost Impact</label>
    <length>120</length>
    <type>Text</type>
</CustomField>