force-app/main/default/objects/Development_Feasibility_Review__c/fields/Flood_Plain_Risk__c.field-meta.xml
<CustomField>
    <fullName>Flood_Plain_Risk__c</fullName>
    <label>Flood Plain Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Significant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>