force-app/main/default/objects/Development_Feasibility_Review__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The property this development feasibility review is for.</description>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Development Feasibility Reviews</relationshipLabel>
    <relationshipName>Development_Feasibility_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>