force-app/main/default/objects/Development_Feasibility_Review__c/fields/Proposals_Received__c.field-meta.xml
<CustomField>
    <fullName>Proposals_Received__c</fullName>
    <label>Proposals Received</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>