force-app/main/default/objects/Development_Feasibility_Review__c/fields/Proposals_Target__c.field-meta.xml
<CustomField>
    <fullName>Proposals_Target__c</fullName>
    <label>Proposals Target</label>
    <length>10</length>
    <type>Text</type>
</CustomField>