force-app/main/default/objects/Development_Feasibility_Review__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who asked for this review (stamped by OpportunityReviewService when the review is opened).</description>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Requested Development Reviews</relationshipLabel>
    <relationshipName>Requested_Development_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>