force-app/main/default/objects/Development_Feasibility_Review__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Feasibility analysis</fullName>
            </value>
            <value>
                <fullName>Vendor proposals</fullName>
            </value>
            <value>
                <fullName>Share Opinion</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Go / Conditional</fullName>
                <isActive>false</isActive>
                <label>Go / Conditional</label>
            </value>
            <value>
                <fullName>No-Go</fullName>
                <isActive>false</isActive>
                <label>No-Go</label>
            </value>
            <value>
                <fullName>Opinion to Acquisition</fullName>
                <isActive>false</isActive>
                <label>Opinion to Acquisition</label>
            </value>
            <value>
                <fullName>Opinion to Junior</fullName>
                <isActive>false</isActive>
                <label>Opinion to Junior</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>