force-app/main/default/objects/Development_Feasibility_Review__c/fields/Zoning_PD_Approval__c.field-meta.xml
<CustomField>
    <fullName>Zoning_PD_Approval__c</fullName>
    <label>Zoning / PD Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Obtained</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>